--- a/src/app/user/group/group.component.html
+++ b/src/app/user/group/group.component.html
@@ -165,7 +165,9 @@
           </div>
           <div class="card-header bg-hi-light-grey p-1 row m-0">
             <button class="btn btn-light">
-              <span (click)="openModal(grpModal, 'edit');">Edit</span>
+              <i class="fas fa-edit" (click)="openModal(grpModal, 'edit');"></i>
+            </button>
+            <button class="btn btn-light">
               <i class="fa fa-trash" (click)="delGrp();"></i>
             </button>
           </div>
@@ -296,7 +298,7 @@
               matInput formControlName="division"
               placeholder="Add Division *"
               [matAutocomplete]="auto"
-              (matChipInputTokenEnd)="add($event)">
+              ><!-- (matChipInputTokenEnd)="add($event)" -->
         </mat-chip-list>
         <mat-autocomplete #auto="matAutocomplete" (optionSelected)="selDivIds($event.option.value)" [displayWith]="displayFn">
             <mat-option *ngFor="let div of divArr" [value]="div">
